--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "spatie/laravel-permission": "^5.11"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.9",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.23",
         "laravel/pint": "^1.13",
