--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,10 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "files": [
+                "app/Helpers/helpers.php"
+            ]
         }
     },
     "autoload-dev": {
